# datasheet-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/notes/: application-circuit-extraction.md  bom-optimization.md  fab-capabilities-and-impedance.md  parametric-search-apis.md  part-cross-reference.md  register-map-extraction.md  snapeda-additional-apis.md  stock-pricing-apis.md
prompts/: extract-application-circuit.md  extract-boot-config.md  extract-characteristics.md  extract-custom.md  extract-drc-rules.md  extract-feature-matrix.md  extract-footprint-image.md  extract-footprint.md  extract-high-speed.md  extract-layout-constraints.md  extract-pages.md  extract-pinout.md  extract-power.md  extract-reference-design.md  extract-registers.md
src/: digikey.rs  extract.rs  extract_pages.rs  file_cache.rs  footprint_image.rs  jlcpcb.rs  llm.rs  main.rs  mouser.rs  page_render.rs  pdf_split.rs  prompts.rs  snapeda.rs  svd.rs
